// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ResourceListItem - Listen to Article Feature > should handle various metadata combinations with audio URL 1`] = `
<div
  class="resource-item__bottom-metadata mt-4 flex flex-wrap items-center gap-x-1 gap-y-2"
>
  <p
    class="bluedot-p not-prose text-gray-600 text-size-xs font-medium leading-normal"
  >
    <span>
      Alice Brown
    </span>
    <span>
       · 
    </span>
    <span>
      2024
    </span>
    <span>
       ·
    </span>
  </p>
  <button
    aria-label="Listen to article: Introduction to AI Safety (opens in Spotify)"
    class="flex flex-row items-center gap-1.5 h-[18px] group cursor-pointer transition-colors duration-200 bg-transparent border-none p-0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="size-4 group-hover:text-bluedot-navy transition-colors duration-200"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zM188.3 147.1c-7.6 4.2-12.3 12.3-12.3 20.9l0 176c0 8.7 4.7 16.7 12.3 20.9s16.8 4.1 24.3-.5l144-88c7.1-4.4 11.5-12.1 11.5-20.5s-4.4-16.1-11.5-20.5l-144-88c-7.4-4.5-16.7-4.7-24.3-.5z"
      />
    </svg>
    <span
      class="text-size-xs font-medium leading-normal text-charcoal-mid group-hover:text-bluedot-navy transition-colors duration-200"
    >
      Listen to article
    </span>
  </button>
</div>
`;

exports[`ResourceListItem - Listen to Article Feature > should handle various metadata combinations with audio URL 2`] = `
<div
  class="resource-item__bottom-metadata mt-4 flex flex-wrap items-center gap-x-1 gap-y-2"
>
  <p
    class="bluedot-p not-prose text-gray-600 text-size-xs font-medium leading-normal"
  >
    <span>
      2024
    </span>
    <span>
       · 
    </span>
    <span>
      20
       min
    </span>
    <span>
       ·
    </span>
  </p>
  <button
    aria-label="Listen to article: Introduction to AI Safety (opens in Spotify)"
    class="flex flex-row items-center gap-1.5 h-[18px] group cursor-pointer transition-colors duration-200 bg-transparent border-none p-0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="size-4 group-hover:text-bluedot-navy transition-colors duration-200"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zM188.3 147.1c-7.6 4.2-12.3 12.3-12.3 20.9l0 176c0 8.7 4.7 16.7 12.3 20.9s16.8 4.1 24.3-.5l144-88c7.1-4.4 11.5-12.1 11.5-20.5s-4.4-16.1-11.5-20.5l-144-88c-7.4-4.5-16.7-4.7-24.3-.5z"
      />
    </svg>
    <span
      class="text-size-xs font-medium leading-normal text-charcoal-mid group-hover:text-bluedot-navy transition-colors duration-200"
    >
      Listen to article
    </span>
  </button>
</div>
`;

exports[`ResourceListItem - Listen to Article Feature > should render Listen to article button when audio URL is provided 1`] = `
<div
  class="resource-item__bottom-metadata mt-4 flex flex-wrap items-center gap-x-1 gap-y-2"
>
  <p
    class="bluedot-p not-prose text-gray-600 text-size-xs font-medium leading-normal"
  >
    <span>
      John Doe
    </span>
    <span>
       · 
    </span>
    <span>
      2024
    </span>
    <span>
       · 
    </span>
    <span>
      10
       min
    </span>
    <span>
       ·
    </span>
  </p>
  <button
    aria-label="Listen to article: Introduction to AI Safety (opens in Spotify)"
    class="flex flex-row items-center gap-1.5 h-[18px] group cursor-pointer transition-colors duration-200 bg-transparent border-none p-0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="size-4 group-hover:text-bluedot-navy transition-colors duration-200"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zM188.3 147.1c-7.6 4.2-12.3 12.3-12.3 20.9l0 176c0 8.7 4.7 16.7 12.3 20.9s16.8 4.1 24.3-.5l144-88c7.1-4.4 11.5-12.1 11.5-20.5s-4.4-16.1-11.5-20.5l-144-88c-7.4-4.5-16.7-4.7-24.3-.5z"
      />
    </svg>
    <span
      class="text-size-xs font-medium leading-normal text-charcoal-mid group-hover:text-bluedot-navy transition-colors duration-200"
    >
      Listen to article
    </span>
  </button>
</div>
`;

exports[`ResourceListItem - Listen to Article Feature > should render Listen to article even without other metadata 1`] = `
<div
  class="resource-item__bottom-metadata mt-4 flex flex-wrap items-center gap-x-1 gap-y-2"
>
  <p
    class="bluedot-p not-prose text-gray-600 text-size-xs font-medium leading-normal"
  >
    <span>
      2024
    </span>
    <span>
       ·
    </span>
  </p>
  <button
    aria-label="Listen to article: Introduction to AI Safety (opens in Spotify)"
    class="flex flex-row items-center gap-1.5 h-[18px] group cursor-pointer transition-colors duration-200 bg-transparent border-none p-0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="size-4 group-hover:text-bluedot-navy transition-colors duration-200"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zM188.3 147.1c-7.6 4.2-12.3 12.3-12.3 20.9l0 176c0 8.7 4.7 16.7 12.3 20.9s16.8 4.1 24.3-.5l144-88c7.1-4.4 11.5-12.1 11.5-20.5s-4.4-16.1-11.5-20.5l-144-88c-7.4-4.5-16.7-4.7-24.3-.5z"
      />
    </svg>
    <span
      class="text-size-xs font-medium leading-normal text-charcoal-mid group-hover:text-bluedot-navy transition-colors duration-200"
    >
      Listen to article
    </span>
  </button>
</div>
`;

exports[`ResourceListItem - Listen to Article Feature > should render Listen to article with proper separator when metadata exists 1`] = `
<div
  class="resource-item__bottom-metadata mt-4 flex flex-wrap items-center gap-x-1 gap-y-2"
>
  <p
    class="bluedot-p not-prose text-gray-600 text-size-xs font-medium leading-normal"
  >
    <span>
      Jane Smith
    </span>
    <span>
       · 
    </span>
    <span>
      2024
    </span>
    <span>
       · 
    </span>
    <span>
      15
       min
    </span>
    <span>
       ·
    </span>
  </p>
  <button
    aria-label="Listen to article: Introduction to AI Safety (opens in Spotify)"
    class="flex flex-row items-center gap-1.5 h-[18px] group cursor-pointer transition-colors duration-200 bg-transparent border-none p-0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="size-4 group-hover:text-bluedot-navy transition-colors duration-200"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zM188.3 147.1c-7.6 4.2-12.3 12.3-12.3 20.9l0 176c0 8.7 4.7 16.7 12.3 20.9s16.8 4.1 24.3-.5l144-88c7.1-4.4 11.5-12.1 11.5-20.5s-4.4-16.1-11.5-20.5l-144-88c-7.4-4.5-16.7-4.7-24.3-.5z"
      />
    </svg>
    <span
      class="text-size-xs font-medium leading-normal text-charcoal-mid group-hover:text-bluedot-navy transition-colors duration-200"
    >
      Listen to article
    </span>
  </button>
</div>
`;

exports[`ResourceListItem - Listen to Article Feature > should render metadata without Listen to article button when no audio URL 1`] = `
<div
  class="resource-item__bottom-metadata mt-4 flex flex-wrap items-center gap-x-1 gap-y-2"
>
  <p
    class="bluedot-p not-prose text-gray-600 text-size-xs font-medium leading-normal"
  >
    <span>
      John Doe
    </span>
    <span>
       · 
    </span>
    <span>
      2024
    </span>
    <span>
       · 
    </span>
    <span>
      10
       min
    </span>
  </p>
</div>
`;
